# hwinfo

./: .gitignore  CMakeLists.txt  CMakePresets.json
examples/: CMakeLists.txt
include/hwinfo/: platform.h
src/: CMakeLists.txt
